fixed z-index where dropdowns are covered by user avatars in authSearchForm

--- a/app/assets/form/authSearchForm.styl
+++ b/app/assets/form/authSearchForm.styl
@@ -7,6 +7,7 @@
   margin-right 1.5
   padding 0
   background-color white
+  z-index 100
 
 .auth-search-found
   margin-bottom f8
